--- a/new.njk
+++ b/new.njk
@@ -46,7 +46,7 @@ layout: layouts/telesthesia-base.njk
   height: 100vh;
 }
 
-.layout__map {
+.layout__map,   #mapcontainer,   #map {
   width: 75%;
   height: 100%;
 }
