--- a/new.njk
+++ b/new.njk
@@ -46,10 +46,13 @@ layout: layouts/telesthesia-base.njk
   height: 100vh;
 }
 
-.layout__map,   #mapcontainer,   #map {
+.layout__map {
   width: 75%;
   height: 100%;
 }
+
+#mapcontainer,   #map {
+height: 100vh}
 
 .layout__data {
   width: 25%;
