--- a/map.njk
+++ b/map.njk
@@ -15,7 +15,7 @@ layout: layouts/telesthesia-base.njk
   <div class="layout__data">
           <div id="console" class="panel">
           <div id="console__text"><span>Ready for input.</span><span>Select a location to search.</span></div>
-          <div id="console__image"></div>
+          <div id="console__image scanlines"></div>
       </div>
 
   <div id="log"></div>
