--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -9,7 +9,7 @@ body {
 content: '';
 display: block;
 z-index: 1;
-position: fixed;
+position: absolute;
 width: 100%;
 height: 100vh;
 box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
@@ -53,6 +53,7 @@ opacity: 0.5;
 .layout__map {
   width: 80%;
   height: 100%;
+  position: relative;
 }
 
 #mapcontainer,   #map {
@@ -72,6 +73,7 @@ height: 100vh}
   .layout__map {
     width: 100%;
     height: 80vh;
+    position: relative;
   }
 
   .layout__data {
@@ -324,10 +326,6 @@ overflow: hidden;
 .panel {
 margin: 20px;
 background-color: rgba(0, 0, 29, 0.5);
-}
-
-.layout__map::before {
-box-shadow: 0 0 200px rgba(0,0,0,0.5) inset;
 }
 
 #console::before {
