--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -62,6 +62,7 @@ height: 100vh}
 .layout__data {
   width: 20%;
   height: 100%;
+  position: relative;
 }
 
 /* Mobile layout */
@@ -79,6 +80,7 @@ height: 100vh}
   .layout__data {
     width: 100%;
     height: 20vh;
+    position: relative;
   }
 }
 
