--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -77,6 +77,10 @@ height: 100vh}
     position: relative;
   }
 
+  .layout__map::before {
+    height: 80vh;
+  }
+
   .layout__data {
     width: 100%;
     height: 20vh;
