--- a/map.njk
+++ b/map.njk
@@ -13,6 +13,7 @@ layout: layouts/telesthesia-base.njk
   </div>
 
   <div class="layout__data">
+    <h1>telesthesia Insitiute </h1>
           <div id="console" class="panel">
           <div id="console__text"><span>Ready for input.</span><span>Select a location to search.</span></div>
           <div id="console__image" class="scanlines"></div>
