--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -109,7 +109,7 @@ height: 100vh;
 }
 
 #console h1 {
-  font-family: 'Russo One', sans-serif;
+  font-family: 'Alfa Slab One', cursive;
   color: white;
   text-transform: uppercase;
   letter-spacing: 3px;
