--- a/map.njk
+++ b/map.njk
@@ -14,7 +14,7 @@ layout: layouts/telesthesia-base.njk
 
   <div class="layout__data">
           <div id="console" class="panel">
-            <h1>telesthesia Insitiute</h1>
+            <!-- <h1>telesthesia Insitiute</h1> -->
           <div id="console__text" data-ty-prefix="> "><span>Ready for input.</span><span>Select a location to search.</span></div>
           <div id="console__image" class="scanlines"></div>
       </div>
