--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -143,12 +143,7 @@ color: white;
 
 
 .tabs {
-  width: 650px;
-  float: none;
-  list-style: none;
-  position: relative;
-  margin: 80px 0 0 10px;
-  text-align: left;
+  width: 100%;
 }
 .tabs li {
   float: left;
@@ -161,41 +156,15 @@ color: white;
 }
 .tabs label {
   display: block;
-  padding: 14px 21px;
-  border-radius: 2px 2px 0 0;
-  font-size: 20px;
-  font-weight: normal;
-  text-transform: uppercase;
-  background: #8e44ad;
-  cursor: pointer;
-  position: relative;
-  top: 4px;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
 }
-.tabs label:hover {
-  background: #703688;
-}
+
 .tabs .tab-content {
   z-index: 2;
   display: none;
   overflow: hidden;
   width: 100%;
-  font-size: 17px;
-  line-height: 25px;
-  padding: 25px;
-  position: absolute;
-  top: 53px;
-  left: 0;
-  background: #612e76;
 }
-.tabs [id^="tab"]:checked + label {
-  top: 0;
-  padding-top: 17px;
-  background: #612e76;
-}
+
 .tabs [id^="tab"]:checked ~ [id^="tab-content"] {
   display: block;
 }
