--- a/map.njk
+++ b/map.njk
@@ -14,23 +14,19 @@ layout: layouts/telesthesia-base.njk
 
   <div class="layout__data">
 
-<ul class="tabs" role="tablist">
-    <li>
-        <input type="radio" name="tabs" id="tab1" checked />
-        <label for="tab1" 
-               role="tab" 
-               aria-selected="true" 
-               aria-controls="panel1" 
-               tabindex="0">Investigation</label>
+    <div class="tab-container">
+    <input type="radio" id="tab1" name="tab" checked>
+    <label for="tab1">Console</label>
 
-        <div id="tab-content1" 
-             class="tab-content" 
-             role="tabpanel" 
-             aria-labelledby="description" 
-             aria-hidden="false">
-          
-             <!-- console here_-->
-                       <div id="console" class="panel">
+    <input type="radio" id="tab2" name="tab">
+    <label for="tab2">Viewings</label>
+   
+    <div class="line"></div>
+    
+    <div class="content-container">
+      <div class="content" id="c1">
+       <!-- console -->
+                 <div id="console" class="panel">
             <!-- <h1>telesthesia Insitiute</h1> -->
           <div id="console__text" data-ty-prefix="> "><span>Ready for input.</span><span>Select a location to search.</span></div>
           <div id="console__image" class="scanlines"></div>
@@ -38,25 +34,14 @@ layout: layouts/telesthesia-base.njk
 
   <div id="log"></div>
 
-        </div>
-    </li>
-  
-    <li>
-        <input type="radio" name="tabs" id="tab2" />
-        <label for="tab2"
-               role="tab" 
-               aria-selected="false" 
-               aria-controls="panel2" 
-               tabindex="0">Readings</label>
-        <div id="tab-content2" 
-             class="tab-content"
-             role="tabpanel" 
-             aria-labelledby="specification" 
-             aria-hidden="true">
-          <p>Readings</p>
-        </div>
-    </li>
-</ul>
+      </div>
+      <div class="content" id="c2"></div>
+        <p>Viewings</p>
+      </div>
+    
+    </div>
+  </div>
+
 
   </div>
 
