--- a/map.njk
+++ b/map.njk
@@ -35,8 +35,11 @@ layout: layouts/telesthesia-base.njk
   <div id="log"></div>
 
       </div>
-      <div class="content" id="c2"></div>
+
+      <div class="content" id="c2">
         <p>Viewings</p>
+      </div>
+        
       </div>
     
     </div>
@@ -44,8 +47,6 @@ layout: layouts/telesthesia-base.njk
 
 
   </div>
-
-</div>
 
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
 <script src='https://telesthesia-app.netlify.app/js/telesthesia.js'></script>
