--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -142,24 +142,13 @@ color: white;
 }
 
 
-
 .tab-container {
-  width: 400px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 0;
-  box-shadow: 0 0 100px RGBa(0, 0, 0, 0.5);
-  border-radius: 3px;
-  overflow: hidden;
+  width: 100%;
 }
 .tab-container input {
   display: none;
 }
-.tab-container input:checked + label {
-  background: #eee;
-}
+
 .tab-container input#tab1:checked ~ .line {
   left: 0%;
 }
@@ -177,41 +166,11 @@ color: white;
 }
 .tab-container label {
   display: inline-block;
-  font-size: 16px;
-  height: 36px;
-  line-height: 36px;
-  width: 25%;
   text-align: center;
-  background: #f4f4f4;
-  color: #555;
+  background: white;
   position: relative;
-  transition: 0.25s background ease;
-  cursor: pointer;
 }
-.tab-container label::after {
-  content: "";
-  height: 2px;
-  width: 100%;
-  position: absolute;
-  display: block;
-  background: #ccc;
-  bottom: 0;
-  opacity: 0;
-  left: 0;
-  transition: 0.25s ease;
-}
-.tab-container label:hover::after {
-  opacity: 1;
-}
-.tab-container .line {
-  position: absolute;
-  height: 2px;
-  background: #1E88E5;
-  width: 25%;
-  top: 34px;
-  left: 0;
-  transition: 0.25s ease;
-}
+
 .tab-container .content-container {
   background: #eee;
   position: relative;
