--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -172,15 +172,14 @@ color: white;
 }
 
 .tab-container .content-container {
-  background: #eee;
   position: relative;
-  height: 100px;
-  font-size: 16px;
+  height: 100vh;
 }
 .tab-container .content-container .content {
   position: absolute;
-  padding: 10px;
+  padding: 0;
   width: 100%;
+  height: 100vh;
   top: 0;
   opacity: 0;
   transition: 0.25s ease;
