--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -143,7 +143,7 @@ color: white;
 
 
 .tab-container {
-  width: 100%;
+  padding: 10px;
 }
 .tab-container input {
   display: none;
@@ -161,10 +161,10 @@ color: white;
   position: relative;
   font-size: 14px;
   text-transform: uppercase;
-  padding: 5px 10px;
+  padding: 2px 10px;
 }
 .tab-container input:checked + label {
-background: green;
+background: #25adad;
 }
 
 .tab-container .content-container {
