--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -125,7 +125,7 @@ filter: brightness(80%) sepia(100%) hue-rotate(135deg) saturate(500%) contrast(6
 #console__image img {
 max-width: 100%;}
 
-#console__text {
+#console__text, .tab-container .content-container {
 flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
 color: #21f9f9;
 line-height: 18px;
