--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -162,6 +162,7 @@ color: white;
   font-size: 14px;
   text-transform: uppercase;
   padding: 2px 10px;
+  z-index: 2;
 }
 .tab-container input:checked + label {
 background: #25adad;
