--- a/map.njk
+++ b/map.njk
@@ -13,7 +13,8 @@ layout: layouts/telesthesia-base.njk
   </div>
 
   <div class="layout__data">
-
+<h1>Telesthesia Institute</h1>
+<h2>Phychic detection unit</h2>
     <div class="tab-container">
     <input type="radio" id="tab1" name="tab" checked>
     <label for="tab1">Console</label>
