--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -43,6 +43,16 @@ left: 0;
 opacity: 0.5;
 }
 
+.layout__data h1 {
+  margin: 0;
+    padding: 0 0 20px 10px;
+    color: white;
+    text-transform: uppercase;
+    font-size: 20px;
+    letter-spacing: 4px;
+    line-height: 24px;
+}
+
  
   /* Desktop layout */
 .layout {
