--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -44,13 +44,22 @@ opacity: 0.5;
 }
 
 .layout__data h1 {
-  margin: 0;
+  margin: 5px 0;
     padding: 0 0 20px 10px;
     color: white;
     text-transform: uppercase;
     font-size: 20px;
     letter-spacing: 4px;
     line-height: 24px;
+}
+
+.layout__data h2 {
+  font-size: 5px;
+    color: #33cccc;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    padding: 0 12px;
+    margin: 10px 0 30px;
 }
 
  
