--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -49,7 +49,7 @@ opacity: 0.5;
 
 .layout__data h1 {
   margin: 5px 0;
-    padding: 0 0 20px 10px;
+    padding: 0 0 0 10px;
     color: white;
     text-transform: uppercase;
     font-size: 20px;
