--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -91,22 +91,24 @@ height: 100vh}
 /* Mobile layout */
 @media (max-width: 767px) {
   .layout {
+    display: flex;
     flex-direction: column;
   }
 
   .layout__map, #map, #mapcontainer {
     width: 100%;
-    height: 70vh;
+    flex:7;
     position: relative;
   }
 
   .layout__map::before {
-    height: 70vh;
+    flex: 7; 
   }
 
   .layout__data {
     width: 100%;
-    height: 30vh;
+    flex: 3;
+    overflow: auto;
     position: relative;
   }
 
