--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -91,20 +91,24 @@ height: 100vh}
 /* Mobile layout */
 @media (max-width: 767px) {
   .layout {
-    display: flex;
     flex-direction: column;
   }
 
-  .layout__map, #map, #mapcontainer,  .layout__map::before {
-    flex: 1;
-    min-height: 70vh;
-    position:relative;
+  .layout__map, #map, #mapcontainer {
+    width: 100%;
+    height: 70vh;
+    position: relative;
   }
 
-   .layout__data {
-    flex: 1;
+  .layout__map::before {
+    height: 70vh;
+  }
+
+  .layout__data {
+    width: 100%;
+    height: 30vh;
+    position: relative;
     overflow: auto;
-    position:relative;
   }
 
   .panel {
