--- a/map.njk
+++ b/map.njk
@@ -38,10 +38,16 @@ layout: layouts/telesthesia-base.njk
       <div class="content" id="c2">
         <p>Viewings</p>
         <ol>
-{% set taglist = collections[ viewings ] %}
-{% for post in taglist | reverse %}
-  <li>{{ post.data.title }}</li>
+
+<ul>
+{% for post in collections.posts %}
+  {% if 'viewings' in post.tags %}
+    <li>{{ post.data.title }}</li>
+  {% endif %}
 {% endfor %}
+
+</ul>
+
 </ol>
       </div>
         
