--- a/map.njk
+++ b/map.njk
@@ -41,9 +41,9 @@ layout: layouts/telesthesia-base.njk
 
 <ul>
  {% for post in collections.posts %}
-       
+        {% if 'viewings' in post.data.tags %}
           <li>{{ post.data.title }}</li>
-      
+        {% endif %}
       {% endfor %}
 </ul>
 
