--- a/map.njk
+++ b/map.njk
@@ -40,7 +40,7 @@ layout: layouts/telesthesia-base.njk
 
   {% set postslist = collections.viewings %}
  {% for post in postslist %}
- <div> {{post | dump }}</div>
+ <div> {{post | json }}</div>
           <div>{{ post.data.title }}</div>
          <div> {{post.content | safe }}</div>
       {% endfor %}
