--- a/map.njk
+++ b/map.njk
@@ -41,7 +41,7 @@ layout: layouts/telesthesia-base.njk
   {% set postslist = collections.viewings %}
  {% for post in postslist %}
           <div>{{ post.data.title }}</div>
-         <div> {{post.content | safe }}</div>
+         <div> {{content | safe }}</div>
       {% endfor %}
 
       </div>
