--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -112,8 +112,11 @@ height: 100vh}
   }
 
   .panel {
-    height:100%;
     padding: 10px;
+  }
+
+  .tab-container .content-container, .tab-container .content-container .content {
+height: auto;
   }
 }
 
