--- a/map.njk
+++ b/map.njk
@@ -4,6 +4,11 @@ layout: layouts/telesthesia-base.njk
 
 <div class="layout">
 
+  <div class="layout__header">
+    <h1>telesthesia Institute</h1>
+    <h2>Sub header</h2>
+  </div>
+
   <div class="layout__map">
 
       <div id="mapcontainer">
@@ -13,8 +18,7 @@ layout: layouts/telesthesia-base.njk
   </div>
 
   <div class="layout__data">
-<h1>Telesthesia Institute</h1>
-<h2>Phychic detection unit</h2>
+
     <div class="tab-container">
     <input type="radio" id="tab1" name="tab" checked>
     <label for="tab1">Console</label>
@@ -26,7 +30,6 @@ layout: layouts/telesthesia-base.njk
       <div class="content" id="c1">
        <!-- console -->
                  <div id="console" class="panel">
-            <!-- <h1>telesthesia Insitiute</h1> -->
           <div id="console__text" data-ty-prefix="> "><span>Ready for input.</span><span>Select a location to search.</span></div>
           <div id="console__image" class="scanlines"></div>
       </div>
