--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -286,14 +286,18 @@ height: 100vh}
     flex-direction: column;
   }
 
+  .layout__header {
+    height: 10vh
+  }
+
   .layout__map, #map, #mapcontainer {
     width: 100%;
-    height: 70vh;
+    height: 60vh;
     position: relative;
   }
 
   .layout__map::before {
-    height: 70vh;
+    height: 60vh;
   }
 
   .layout__data {
