--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -116,8 +116,10 @@ color: white;
 
 
 .tab-container {
-  padding: 0 10px 10px 10px;
+  padding: 0 10px;
+    height: 30px;
 }
+
 .tab-container input {
   display: none;
 }
@@ -304,6 +306,7 @@ height: 100vh}
     width: 100%;
     height: 30vh;
     position: relative;
+    top: -30px;
     overflow: auto;
   }
 
