--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -273,6 +273,13 @@ text-shadow: 2px 2px #000000;
   position: relative;
 }
 
+.layout__header {
+  position: absolute;
+  z-index: 100;
+  top: 20px;
+  left: 20px;
+}
+
 #mapcontainer,   #map {
 height: 100vh}
 
