--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -130,24 +130,26 @@ color: white;
   opacity: 1;
 }
 .tab-container label {
+  color: #25adad;
   display: inline;
   text-align: center;
-  background: white;
+  background: #194146;
   position: relative;
   font-size: 14px;
   text-transform: uppercase;
   padding: 2px 10px;
   z-index: 2;
+  border: 1px solid #25adad;
 }
 .tab-container input:checked + label {
-background: #25adad;
+  background: #25adad;
+  color: #194146;
 }
 
 .tab-container .content-container {
   position: relative;
   height: 100vh;
   clear: both;
-    border-top: 1px solid #1bbaba;
     z-index: 1;
 }
 .tab-container .content-container .content {
@@ -322,7 +324,7 @@ height: 100vh}
   }
 
   .tab-container .content-container, .tab-container .content-container .content, .panel {
-height: auto;
+    height: fit-content;
   }
 }
 
