--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -116,7 +116,7 @@ color: white;
 
 
 .tab-container {
-  padding: 0 10px;
+  padding: 0;
     height: 30px;
 }
 
@@ -154,6 +154,7 @@ color: white;
 }
 .tab-container .content-container .content {
   position: absolute;
+  margin-top: 10px;
   padding: 0;
   width: 100%;
   height: 100vh;
@@ -298,7 +299,7 @@ height: 100vh}
   }
 
   .layout__map, #map, #mapcontainer {
-    width: 100%;
+    width: 99.5%;
     height: 70vh;
     position: relative;
   }
@@ -311,12 +312,26 @@ height: 100vh}
     width: 100%;
     height: 30vh;
     position: relative;
-    top: -30px;
+    top: -32px;
     overflow: auto;
   }
 
-  .panel {
+  #console {
+    display:flex;
+  }
+
+  #console__text {
+    margin-top: 0px;
+    border: 1px solid #25adad;
     padding: 10px;
+    flex-basis: 60%;
+  }
+  #console__image {
+    flex-basis: 40%;
+  }
+
+  .panel {
+    padding: 10px 0;
   }
 
   .tab-container .content-container, .tab-container .content-container .content, .panel {
