--- a/map.njk
+++ b/map.njk
@@ -19,8 +19,10 @@ layout: layouts/telesthesia-base.njk
 
   <div class="layout__data">
 
+<div class="layout__buttons">
     <button id="console-button">Console</button>
     <button id="viewings-button">Viewings</button>
+</div>
 
     
     <div class="content-container">
