--- a/map.njk
+++ b/map.njk
@@ -19,15 +19,16 @@ layout: layouts/telesthesia-base.njk
 
   <div class="layout__data">
 
-<div class="layout__buttons">
-    <button id="console-button">Console</button>
-    <button id="viewings-button">Viewings</button>
-</div>
+    <div class="tab-container">
+    <input type="radio" id="tab1" name="tab" checked>
+    <label for="tab1">Console</label>
 
+    <input type="radio" id="tab2" name="tab">
+    <label for="tab2">Viewings</label>
     
     <div class="content-container">
 
-      <div class="content" id="console-layer">
+      <div class="content" id="c1">
             <!-- console -->
             <div id="console" class="panel">
                 <div id="console__text" data-ty-prefix="> "><span>Ready for input.</span><span>Select a location to search.</span></div>
@@ -37,16 +38,16 @@ layout: layouts/telesthesia-base.njk
             <div id="log"></div>
       </div>
 
-      <div class="content" id="viewings-layer">
+      <div class="content" id="c2">
         <p>Viewings</p>
             {% set postslist = collections.viewings %}
             {% for post in postslist %}
               <div>{{ post.data.title }}</div>
               <div> {{post.content | safe }}</div>
-            {% endfor %}
+          {% endfor %}
       </div>
         
-    
+      </div>
     
     </div>
   </div>
