--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -314,11 +314,11 @@ main {
   }
 
   .layout__data {
-    width: auto;
+    width: 100%;
     height: 30vh;
     position: relative;
+    top: -32px;
     overflow: auto;
-    padding: 15px;
   }
 
   #console {
