--- a/new.njk
+++ b/new.njk
@@ -2,78 +2,70 @@
 layout: layouts/telesthesia-base.njk
 ---
 
-
-<STYLE>
-  body {
-  height: 100vh; /* set the height of the body to 100% of the viewport height */
-  display: flex; /* use flexbox layout */
-  flex-direction: column; /* stack the child elements vertically */
+<style>
+  .layout {
+  display: flex;
+  flex-direction: column;
+  height: 100vh; /* sets the height of the layout to the full viewport height */
 }
 
-#a {
-  flex: 0 0 70%; /* set the flex value to 0 for grow and shrink, and 70% for basis */
+.layout__header {
+  background-color: #f2f2f2;
+  padding: 1rem;
 }
 
-#b {
-  flex: 1 0 30%; /* set the flex value to 1 for grow, 0 for shrink, and 30% for basis */
-  max-height: 50vh; /* set the maximum height to 50% of the viewport height */
-  overflow-y: auto; /* add scrollbars when content exceeds the height */
+.layout__header h1 {
+  margin: 0;
 }
 
-</STYLE>
+.layout__content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 100%;
+}
 
+.layout__map {
+  background-color: #d9d9d9;
+  flex-basis: 70%;
+  height: 70vh;
+}
+
+.layout__data {
+  background-color: #e5e5e5;
+  flex-basis: 30%;
+  height: 30vh;
+}
+
+@media screen and (max-width: 767px) {
+  .layout__content {
+    flex-direction: column;
+  }
+
+  .layout__map {
+    flex-basis: 100%;
+    height: 70%;
+  }
+
+  .layout__data {
+    flex-basis: 100%;
+    height: 30%;
+  }
+}
+
+</style>
 
 <div class="layout">
-
-  <div class="layout__map" id="a">
-
-      <div id="mapcontainer">
-        <div id="map"></div>
-      </div>
-
+  <div class="layout__header">
+    <h1>telesthesia</h1>
   </div>
-
-  <div class="layout__data" id="b">
-<h1>Telesthesia Institute</h1>
-<h2>Phychic detection unit</h2>
-    <div class="tab-container">
-    <input type="radio" id="tab1" name="tab" checked>
-    <label for="tab1">Console</label>
-
-    <input type="radio" id="tab2" name="tab">
-    <label for="tab2">Viewings</label>
-    
-    <div class="content-container">
-      <div class="content" id="c1">
-       <!-- console -->
-                 <div id="console" class="panel">
-            <!-- <h1>telesthesia Insitiute</h1> -->
-          <div id="console__text" data-ty-prefix="> "><span>Ready for input.</span><span>Select a location to search.</span></div>
-          <div id="console__image" class="scanlines"></div>
-      </div>
-
-  <div id="log"></div>
-
-      </div>
-
-      <div class="content" id="c2">
-        <p>Viewings</p>
-
-  {% set postslist = collections.viewings %}
- {% for post in postslist %}
-          <div>{{ post.data.title }}</div>
-         <div> {{post.content | safe }}</div>
-      {% endfor %}
-
-      </div>
-        
-      </div>
-    
-    </div>
+  <div class="layout__content">
+    <div class="layout__map"></div>
+    <div class="layout__data"></div>
   </div>
+</div>
 
-
-  </div>
 
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
 <script src='https://telesthesia-app.netlify.app/js/telesthesia.js'></script>
