--- a/new.njk
+++ b/new.njk
@@ -2,70 +2,55 @@
 layout: layouts/telesthesia-base.njk
 ---
 
-<style>
-  .layout {
-  display: flex;
-  flex-direction: column;
-  height: 100vh; /* sets the height of the layout to the full viewport height */
-}
-
-.layout__header {
-  background-color: #f2f2f2;
-  padding: 1rem;
-}
-
-.layout__header h1 {
-  margin: 0;
-}
-
-.layout__content {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  height: 100%;
-}
-
-.layout__map {
-  background-color: #d9d9d9;
-  flex-basis: 70%;
-  height: 70vh;
-}
-
-.layout__data {
-  background-color: #e5e5e5;
-  flex-basis: 30%;
-  height: 30vh;
-}
-
-@media screen and (max-width: 767px) {
-  .layout__content {
-    flex-direction: column;
-  }
-
-  .layout__map {
-    flex-basis: 100%;
-    height: 70%;
-  }
-
-  .layout__data {
-    flex-basis: 100%;
-    height: 30%;
-  }
-}
-
-</style>
-
 <div class="layout">
-  <div class="layout__header">
-    <h1>telesthesia</h1>
-  </div>
-  <div class="layout__content">
-    <div class="layout__map"></div>
-    <div class="layout__data"></div>
-  </div>
-</div>
 
+  <div class="layout__header">
+    <h1>telesthesia Institute</h1>
+    <h2>Sub header</h2>
+  </div>
+
+  <div class="layout__map">
+
+      <div id="mapcontainer">
+        <div id="map"></div>
+        <div id="nav">
+          <button>Console</button>
+          <button>Viewings</button>
+        </div>
+      </div>
+
+  </div>
+
+  <div class="layout__data">
+
+    <div class="content-container">
+
+      <div class="content" id="c1">
+            <!-- console -->
+            <div id="console" class="panel">
+                <div id="console__text" data-ty-prefix="> "><span>Ready for input.</span><span>Select a location to search.</span></div>
+                <div id="console__image" class="scanlines"></div>
+            </div>
+
+            <div id="log"></div>
+      </div>
+
+      <div class="content" id="c2">
+        <p>Viewings</p>
+            {% set postslist = collections.viewings %}
+            {% for post in postslist %}
+              <div>{{ post.data.title }}</div>
+              <div> {{post.content | safe }}</div>
+          {% endfor %}
+      </div>
+        
+      </div>
+    
+    </div>
+  </div>
+
+
+  </div>
 
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
 <script src='https://telesthesia-app.netlify.app/js/telesthesia.js'></script>
