--- a/new.njk
+++ b/new.njk
@@ -7,16 +7,16 @@ layout: layouts/telesthesia-base.njk
   <div class="layout__header">
     <h1>telesthesia Institute</h1>
     <h2>Sub header</h2>
+     <div id="layout__header-nav">
+          <button>Console</button>
+          <button>Viewings</button>
+        </div>
   </div>
 
   <div class="layout__map">
 
       <div id="mapcontainer">
         <div id="map"></div>
-        <div id="nav">
-          <button>Console</button>
-          <button>Viewings</button>
-        </div>
       </div>
 
   </div>
