--- a/new.njk
+++ b/new.njk
@@ -8,8 +8,8 @@ layout: layouts/telesthesia-base.njk
     <h1>telesthesia Institute</h1>
     <h2>Sub header</h2>
      <div id="layout__header-nav">
-          <button>Console</button>
-          <button>Viewings</button>
+          <button class="btn-console">Console</button>
+          <button class="btn-viewings">Viewings</button>
         </div>
   </div>
 
