--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -114,6 +114,15 @@ display:block;
 color: white;
 }
 
+#layout__header-nav {
+  position: absolute;
+  top: 10px;
+  right: 50px;
+}
+
+.layout__header {
+  width: 100%;
+}
 
 .tab-container {
   padding: 0;
@@ -278,7 +287,7 @@ text-shadow: 2px 2px #000000;
 }
 
 .layout__map {
-  width: 80%;
+  width: 100%;
   height: 100%;
   position: relative;
 }
@@ -287,9 +296,14 @@ text-shadow: 2px 2px #000000;
 height: 100vh}
 
 .layout__data {
-  width: 20%;
+  max-width: 50%;
   height: 100%;
-  position: relative;
+  position: absolute;
+  top: 20px;
+  right: 50px;
+  z-index: 100;
+  padding: 0;
+  text-align: right;
 }
 
 /* Mobile layout */
