--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -143,7 +143,7 @@ color: white;
   position: relative;
   font-size: 14px;
   text-transform: uppercase;
-  padding: 2px 10px;
+  padding: 5px 15px;
   z-index: 2;
   border: 1px solid #25adad;
 }
@@ -301,6 +301,11 @@ height: 100vh}
   z-index: 100;
   padding: 0;
   text-align: right;  
+}
+
+.btn-console--active, .btn-viewings--active {
+  background: #25adad;
+    color: #194146;
 }
 
 /* Mobile layout */
