--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -98,7 +98,7 @@ filter: brightness(80%) sepia(100%) hue-rotate(135deg) saturate(500%) contrast(6
 #console__image img {
 max-width: 100%;}
 
-#console__text, .tab-container .content-container {
+.content-container {
 flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
 color: #21f9f9;
 line-height: 18px;
@@ -306,6 +306,14 @@ height: 100vh}
 .btn-console--active #layout__header-nav button.btn-console, .btn-viewings--active #layout__header-nav button.btn-viewings {
   background: #25adad;
     color: #194146;
+}
+
+.btn-console--active #c1, .btn-viewings--active #c2 {
+display: block;
+}
+
+.btn-viewings--active #c1, .btn-console--active #c2  {
+  display: none;
 }
 
 /* Mobile layout */
