--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -317,6 +317,15 @@ display: block;
   display: none;
 }
 
+#c2 {color:white;}
+#c2 h2 {background: #25adad;
+  color: #194146;
+  text-shadow: none;
+  text-transform: uppercase;
+  padding: 5px 10px;
+  font-weight: 400;
+  display: block;}
+
 /* Mobile layout */
 @media (max-width: 767px) {
 
