--- a/map.njk
+++ b/map.njk
@@ -35,7 +35,7 @@ layout: layouts/telesthesia-base.njk
       </div>
 
       <div class="content" id="c2">
-        <p>Viewings</p>
+        <h2>Viewings</h2>
             {% set postslist = collections.viewings %}
             {% for post in postslist %}
               <div>{{ post.data.title }}</div>
