--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -11,7 +11,7 @@
 <link href='https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css' rel='stylesheet' />
     
     </head>
-  <body>
+  <body class="btn-console--active">
 
     <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
       {{ content | safe }}
