--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -60,12 +60,11 @@ opacity: 0.5;
 .layout__header h1::before {
   width: 50px;
   height: 40px;
-  display: inline-block;
   float: left;
   content: '';
   background-size: contain;
   background-repeat: no-repeat;
-  background-image: url(data:image/svg+xml,%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='50px' height='40px' viewBox='0 0 120 120' fill='white' enable-background='new 0 0 120 120' xml:space='preserve'%3E%3Cpath d='M60,19.089C22.382,19.089,0.053,60,0.053,60S22.382,100.91,60,100.91S119.947,60,119.947,60S97.618,19.089,60,19.089z M59.999,84.409C46.54,84.409,35.59,73.459,35.59,60c0-13.459,10.95-24.409,24.409-24.409c13.459,0,24.409,10.95,24.409,24.409 C84.408,73.459,73.458,84.409,59.999,84.409z'/%3E%3Ccircle cx='60' cy='60.583' r='14.409'/%3E%3C/svg%3E);
+  background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='50px' height='40px' viewBox='0 0 120 120' fill='white' enable-background='new 0 0 120 120' xml:space='preserve'%3E%3Cpath d='M60,19.089C22.382,19.089,0.053,60,0.053,60S22.382,100.91,60,100.91S119.947,60,119.947,60S97.618,19.089,60,19.089z M59.999,84.409C46.54,84.409,35.59,73.459,35.59,60c0-13.459,10.95-24.409,24.409-24.409c13.459,0,24.409,10.95,24.409,24.409 C84.408,73.459,73.458,84.409,59.999,84.409z'/%3E%3Ccircle cx='60' cy='60.583' r='14.409'/%3E%3C/svg%3E");
   position: relative;
   top: -7px;
   left: -5px;
