--- a/map.njk
+++ b/map.njk
@@ -38,6 +38,7 @@ layout: layouts/telesthesia-base.njk
         <h2>Viewings</h2>
             {% set postslist = collections.viewings %}
             {% for post in postslist %}
+            {{post | dump}}
               <div>{{ post.data.title }}</div>
               <div> {{post.content | safe }}</div>
           {% endfor %}
