--- a/map.njk
+++ b/map.njk
@@ -39,7 +39,7 @@ layout: layouts/telesthesia-base.njk
             {% set postslist = collections.viewings %}
             {% for post in postslist %}
               <div>{{ post.data.title }}</div>
-              <div> {{post | safe }}</div>
+              <div> {{post.templateContent | safe }}</div>
           {% endfor %}
       </div>
         
