--- a/map.njk
+++ b/map.njk
@@ -38,8 +38,10 @@ layout: layouts/telesthesia-base.njk
         <h2>Viewings</h2>
             {% set postslist = collections.viewings %}
             {% for post in postslist %}
+            <div class="post-item">
               <div>{{ post.data.title }}</div>
               <div> {{post.templateContent | safe }}</div>
+              </div>
           {% endfor %}
       </div>
         
