--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -359,6 +359,7 @@ button {cursor:pointer;}
     line-height: 20px;
   }
   .layout__data {
+    width:initial;
     max-width: 250px;
     top: 90px;
     right: 30px;
@@ -366,6 +367,9 @@ button {cursor:pointer;}
   .panel, #c2 {
     font-size: 10px;
     line-height: 14px;
+  }
+  .content-container {
+    padding: 10px;
   }
 }
 
