--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -359,10 +359,13 @@ button {cursor:pointer;}
     line-height: 20px;
   }
   .layout__data {
-    width:initial;
-    max-width: 250px;
-    top: 90px;
-    right: 30px;
+    width: initial;
+    max-width: 85%;
+    top: inherit;
+    left: 25px;
+    right: 0;
+    bottom: 15px;
+    text-align: left;
   }
   .panel, #c2 {
     font-size: 10px;
