--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -302,7 +302,7 @@ text-shadow: 2px 2px #000000;
 
 .layout__map {
   width: 100%;
-  height: 100%;
+  height:calc(100% - 22px);
   position: relative;
 }
 
